--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -76,50 +76,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "616501\n",
-      "The picked packet combination is: [1, 1, 1, 7]\n",
-      "Updated weight map is: {1: 12, 2: 5, 4: 7, 5: 2, 6: 3, 7: 1, 9: 4}\n",
-      "170187\n",
+      "Total possible subsets: 616501\n",
+      "The picked packet combination is: [1, 1, 2, 2, 4]\n",
+      "Updated weight map is: {1: 13, 2: 3, 4: 6, 5: 2, 6: 3, 7: 2, 9: 4}\n",
+      "Total possible subsets: 104433\n",
+      "The picked packet combination is: [1, 1, 1, 1, 1, 1, 4]\n",
+      "Updated weight map is: {1: 7, 2: 3, 4: 5, 5: 2, 6: 3, 7: 2, 9: 4}\n",
+      "Total possible subsets: 3454\n",
       "The picked packet combination is: [1, 1, 1, 1, 2, 4]\n",
-      "Updated weight map is: {1: 8, 2: 4, 4: 6, 5: 2, 6: 3, 7: 1, 9: 4}\n",
-      "12616\n",
-      "The picked packet combination is: [1, 1, 1, 1, 2, 4]\n",
-      "Updated weight map is: {1: 4, 2: 3, 4: 5, 5: 2, 6: 3, 7: 1, 9: 4}\n",
-      "632\n",
-      "The picked packet combination is: [1, 1, 4, 4]\n",
-      "Updated weight map is: {1: 2, 2: 3, 4: 3, 5: 2, 6: 3, 7: 1, 9: 4}\n",
-      "109\n",
+      "Updated weight map is: {1: 3, 2: 2, 4: 4, 5: 2, 6: 3, 7: 2, 9: 4}\n",
+      "Total possible subsets: 170\n",
       "The picked packet combination is: [1, 1, 2, 6]\n",
-      "Updated weight map is: {1: 0, 2: 2, 4: 3, 5: 2, 6: 2, 7: 1, 9: 4}\n",
-      "15\n",
-      "The picked packet combination is: [2, 4, 4]\n",
-      "Updated weight map is: {1: 0, 2: 1, 4: 1, 5: 2, 6: 2, 7: 1, 9: 4}\n",
-      "3\n",
-      "The picked packet combination is: [5, 5]\n",
-      "Updated weight map is: {1: 0, 2: 1, 4: 1, 5: 0, 6: 2, 7: 1, 9: 4}\n",
-      "2\n",
+      "Updated weight map is: {1: 1, 2: 1, 4: 4, 5: 2, 6: 2, 7: 2, 9: 4}\n",
+      "Total possible subsets: 33\n",
       "The picked packet combination is: [4, 6]\n",
-      "Updated weight map is: {1: 0, 2: 1, 4: 0, 5: 0, 6: 1, 7: 1, 9: 4}\n",
-      "0\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "Cannot choose from an empty sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-91-007e917f6929>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     68\u001b[0m     \u001b[1;31m# TODO: Replace randomizer heristic\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput_subset_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 70\u001b[1;33m     \u001b[0mpicked_choice\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput_subset_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     71\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"The picked packet combination is: {picked_choice}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\random.py\u001b[0m in \u001b[0;36mchoice\u001b[1;34m(self, seq)\u001b[0m\n\u001b[0;32m    288\u001b[0m             \u001b[0mi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_randbelow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    289\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 290\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Cannot choose from an empty sequence'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    291\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mseq\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    292\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: Cannot choose from an empty sequence"
+      "Updated weight map is: {1: 1, 2: 1, 4: 3, 5: 2, 6: 1, 7: 2, 9: 4}\n",
+      "Total possible subsets: 22\n",
+      "The picked packet combination is: [1, 9]\n",
+      "Updated weight map is: {1: 0, 2: 1, 4: 3, 5: 2, 6: 1, 7: 2, 9: 3}\n",
+      "Total possible subsets: 7\n",
+      "The picked packet combination is: [2, 4, 4]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 1, 5: 2, 6: 1, 7: 2, 9: 3}\n",
+      "Total possible subsets: 2\n",
+      "The picked packet combination is: [5, 5]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 1, 5: 0, 6: 1, 7: 2, 9: 3}\n",
+      "Total possible subsets: 1\n",
+      "The picked packet combination is: [4, 6]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 2, 9: 3}\n",
+      "Total possible subsets: 0\n",
+      "The picked packet combination is: [7]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 1, 9: 3}\n",
+      "Total possible subsets: 0\n",
+      "The picked packet combination is: [9]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 1, 9: 2}\n",
+      "Total possible subsets: 0\n",
+      "The picked packet combination is: [9]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 1, 9: 1}\n",
+      "Total possible subsets: 0\n",
+      "The picked packet combination is: [9]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 1, 9: 0}\n",
+      "Total possible subsets: 0\n",
+      "The picked packet combination is: [7]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 0, 9: 0}\n",
+      "Total no of commutes: 14\n"
      ]
     }
    ],
@@ -158,9 +164,6 @@
     "    total = functools.reduce(lambda a, b : a + b, weights)\n",
     "    if weights[0] <= target_sum and total >= target_sum:\n",
     "        subset_sum(weights, sub_set, size, 0, 0, 0, target_sum, output_subset_list)\n",
-    "    else:\n",
-    "        print('not upto the mark')\n",
-    "        output_subset_list.extend(weights)\n",
     "\n",
     "# Execution starts here\n",
     "\n",
@@ -183,28 +186,42 @@
     "\n",
     "weight_map = {1: 15, 2: 5, 4: 7, 5: 2, 6: 3, 7: 2, 9: 4}\n",
     "target_sum = 10\n",
+    "is_case_1 = False\n",
+    "is_case_2 = False\n",
+    "total_no_of_commutes = 0\n",
     "\n",
     "while(len(list(filter(lambda x: weight_map[x] > 0, list(weight_map.keys())))) > 0):\n",
     "    weights = generate_list_from_weight_map(weight_map)\n",
     "    size = len(weights)\n",
     "    output_subset_list = []\n",
     "    \n",
-    "    generateSubsets(weights, size, target_sum, output_subset_list)\n",
+    "    if not is_case_1 and not is_case_2:\n",
+    "        generateSubsets(weights, size, target_sum, output_subset_list)\n",
     "    \n",
-    "    # TODO: Replace randomizer heristic\n",
-    "    print(len(output_subset_list))\n",
-    "    picked_choice = random.choice(output_subset_list)\n",
+    "    print(f\"Total possible subsets: {len(output_subset_list)}\")\n",
+    "    \n",
+    "    picked_choice = []\n",
+    "    if len(output_subset_list) == 0:\n",
+    "        t = functools.reduce(lambda a, b : a + b, weights)\n",
+    "        if t < target_sum: # Case-1 :- [1, 1, 1] sum := 3 < 10\n",
+    "            is_case_1 = True\n",
+    "            picked_choice.extend(weights)\n",
+    "        else: # Case-2 :- [7, 7, 9, 9] sum:= 32 > 10\n",
+    "            is_case_2 = True\n",
+    "            picked_choice = [random.choice(weights)]\n",
+    "    else:\n",
+    "        # TODO: Replace randomizer heristic\n",
+    "        picked_choice = random.choice(output_subset_list)\n",
+    "    \n",
     "    print(f\"The picked packet combination is: {picked_choice}\")\n",
-    "    \n",
     "    # Re-updating the weight map\n",
     "    for item in picked_choice:\n",
     "        weight_map[item] -= 1\n",
     "\n",
     "    print(f\"Updated weight map is: {weight_map}\")\n",
+    "    total_no_of_commutes += 1\n",
     "    \n",
-    "\n",
-    "# [1, 1, 1] 10\n",
-    "# [7, 7, 9, 9] 10"
+    "print(f\"Total no of commutes: {total_no_of_commutes}\")\n"
    ]
   },
   {
