Added simulated annealing code for subset sum problem

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -38,7 +38,6 @@
     "        for x in range(coin, amount + 1):\n",
     "            dp[x] = min(dp[x], dp[x - coin] + 1)\n",
     "    return dp\n",
-    "\n",
     "    \n",
     "def getDenominations(dp, amount, coins, coin_map, denomination=[]):\n",
     "    if(amount == 0):\n",
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -84,48 +83,51 @@
      "output_type": "stream",
      "text": [
       "Total possible subsets: 616501\n",
-      "The picked packet combination is: [1, 1, 2, 2, 4]\n",
-      "Updated weight map is: {1: 13, 2: 3, 4: 6, 5: 2, 6: 3, 7: 2, 9: 4}\n",
-      "Total possible subsets: 104433\n",
-      "The picked packet combination is: [1, 1, 1, 1, 1, 1, 4]\n",
-      "Updated weight map is: {1: 7, 2: 3, 4: 5, 5: 2, 6: 3, 7: 2, 9: 4}\n",
-      "Total possible subsets: 3454\n",
       "The picked packet combination is: [1, 1, 1, 1, 2, 4]\n",
+      "Updated weight map is: {1: 11, 2: 4, 4: 6, 5: 2, 6: 3, 7: 2, 9: 4}\n",
+      "Total possible subsets: 54881\n",
+      "The picked packet combination is: [1, 1, 1, 1, 1, 1, 4]\n",
+      "Updated weight map is: {1: 5, 2: 4, 4: 5, 5: 2, 6: 3, 7: 2, 9: 4}\n",
+      "Total possible subsets: 1746\n",
+      "The picked packet combination is: [1, 1, 2, 2, 4]\n",
       "Updated weight map is: {1: 3, 2: 2, 4: 4, 5: 2, 6: 3, 7: 2, 9: 4}\n",
       "Total possible subsets: 170\n",
-      "The picked packet combination is: [1, 1, 2, 6]\n",
-      "Updated weight map is: {1: 1, 2: 1, 4: 4, 5: 2, 6: 2, 7: 2, 9: 4}\n",
-      "Total possible subsets: 33\n",
-      "The picked packet combination is: [4, 6]\n",
-      "Updated weight map is: {1: 1, 2: 1, 4: 3, 5: 2, 6: 1, 7: 2, 9: 4}\n",
-      "Total possible subsets: 22\n",
-      "The picked packet combination is: [1, 9]\n",
-      "Updated weight map is: {1: 0, 2: 1, 4: 3, 5: 2, 6: 1, 7: 2, 9: 3}\n",
-      "Total possible subsets: 7\n",
       "The picked packet combination is: [2, 4, 4]\n",
-      "Updated weight map is: {1: 0, 2: 0, 4: 1, 5: 2, 6: 1, 7: 2, 9: 3}\n",
-      "Total possible subsets: 2\n",
-      "The picked packet combination is: [5, 5]\n",
-      "Updated weight map is: {1: 0, 2: 0, 4: 1, 5: 0, 6: 1, 7: 2, 9: 3}\n",
-      "Total possible subsets: 1\n",
+      "Updated weight map is: {1: 3, 2: 1, 4: 2, 5: 2, 6: 3, 7: 2, 9: 4}\n",
+      "Total possible subsets: 68\n",
       "The picked packet combination is: [4, 6]\n",
-      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 2, 9: 3}\n",
+      "Updated weight map is: {1: 3, 2: 1, 4: 1, 5: 2, 6: 2, 7: 2, 9: 4}\n",
+      "Total possible subsets: 46\n",
+      "The picked packet combination is: [1, 9]\n",
+      "Updated weight map is: {1: 2, 2: 1, 4: 1, 5: 2, 6: 2, 7: 2, 9: 3}\n",
+      "Total possible subsets: 21\n",
+      "The picked packet combination is: [1, 9]\n",
+      "Updated weight map is: {1: 1, 2: 1, 4: 1, 5: 2, 6: 2, 7: 2, 9: 2}\n",
+      "Total possible subsets: 9\n",
+      "The picked packet combination is: [5, 5]\n",
+      "Updated weight map is: {1: 1, 2: 1, 4: 1, 5: 0, 6: 2, 7: 2, 9: 2}\n",
+      "Total possible subsets: 6\n",
+      "The picked packet combination is: [1, 9]\n",
+      "Updated weight map is: {1: 0, 2: 1, 4: 1, 5: 0, 6: 2, 7: 2, 9: 1}\n",
+      "Total possible subsets: 2\n",
+      "The picked packet combination is: [4, 6]\n",
+      "Updated weight map is: {1: 0, 2: 1, 4: 0, 5: 0, 6: 1, 7: 2, 9: 1}\n",
+      "Total possible subsets: 0\n",
+      "The picked packet combination is: [2]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 1, 7: 2, 9: 1}\n",
       "Total possible subsets: 0\n",
       "The picked packet combination is: [7]\n",
-      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 1, 9: 3}\n",
-      "Total possible subsets: 0\n",
-      "The picked packet combination is: [9]\n",
-      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 1, 9: 2}\n",
-      "Total possible subsets: 0\n",
-      "The picked packet combination is: [9]\n",
-      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 1, 9: 1}\n",
-      "Total possible subsets: 0\n",
-      "The picked packet combination is: [9]\n",
-      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 1, 9: 0}\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 1, 7: 1, 9: 1}\n",
       "Total possible subsets: 0\n",
       "The picked packet combination is: [7]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 1, 7: 0, 9: 1}\n",
+      "Total possible subsets: 0\n",
+      "The picked packet combination is: [6]\n",
+      "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 0, 9: 1}\n",
+      "Total possible subsets: 0\n",
+      "The picked packet combination is: [9]\n",
       "Updated weight map is: {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 0, 9: 0}\n",
-      "Total no of commutes: 14\n"
+      "Total no of commutes: 15\n"
      ]
     }
    ],
@@ -185,6 +187,8 @@
     "\n",
     "\n",
     "weight_map = {1: 15, 2: 5, 4: 7, 5: 2, 6: 3, 7: 2, 9: 4}\n",
+    "# weight_map = {1: 1, 2: 1, 4: 1, 5: 1, 6: 1, 7: 1, 9: 1}\n",
+    "# weight_map = {1: 0, 2: 0, 4: 0, 5: 0, 6: 0, 7: 0, 9: 1}\n",
     "target_sum = 10\n",
     "is_case_1 = False\n",
     "is_case_2 = False\n",
@@ -209,11 +213,13 @@
     "        else: # Case-2 :- [7, 7, 9, 9] sum:= 32 > 10\n",
     "            is_case_2 = True\n",
     "            picked_choice = [random.choice(weights)]\n",
+    "#             picked_choice = heuristic_function(weights)\n",
     "    else:\n",
     "        # TODO: Replace randomizer heristic\n",
     "        picked_choice = random.choice(output_subset_list)\n",
     "    \n",
     "    print(f\"The picked packet combination is: {picked_choice}\")\n",
+    "    \n",
     "    # Re-updating the weight map\n",
     "    for item in picked_choice:\n",
     "        weight_map[item] -= 1\n",
@@ -225,18 +231,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Approach 2"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
